Fix for one liner description for each of the roles

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -47,10 +47,10 @@ b2bunit.yes.button=Yes
 b2buser.no.button=No
 b2buser.yes.button=Yes
 
-b2busergroup.b2badmingroup.name=Distributor Administrator
-b2busergroup.b2bapprovergroup.name=Distributor Approver
-b2busergroup.b2bcustomergroup.name=Distributor Order Creator
-b2busergroup.b2bviewergroup.name=Distributor Viewer
+b2busergroup.b2badmingroup.name=Distributor Administrator	- Can create/approve/view orders & manage users
+b2busergroup.b2bapprovergroup.name=Distributor Approver	- Can only approve orders
+b2busergroup.b2bcustomergroup.name=Distributor Order Creator - Can only create orders
+b2busergroup.b2bviewergroup.name=Distributor Viewer - Can only view catalog and previous orders
 
 b2busergroup.cancel=Cancel
 b2busergroup.id=Usergroup ID
@@ -225,7 +225,7 @@ checkout.summary.paymentType.header=Select Payment Type
 checkout.summary.placeOrder=Proceed
 simulateCheckout.summary.placeOrder =Place Order
 checkout.summary.placeReplenishmentOrder=Place Replenishment Order
-checkout.summary.placeOrder.readTermsAndConditions=I have read and agree with the <a class="termsAndConditionsLink" href="javascript:void(0)">Terms & Conditions</a>
+checkout.summary.placeOrder.readTermsAndConditions=I have read and agree to the <a class="termsAndConditionsLink" href="javascript:void(0)">Terms & Conditions</a>
 checkout.summary.purchaseOrderNumber=P.O.No.
 checkout.summary.replenishmentScheduleForm.title=Set replenishment schedule
 checkout.summary.scheduleReplenishment=Schedule Replenishment
@@ -1468,7 +1468,7 @@ text.account.excelUpload.fileUploadSize=Maximum File Size is 1 MB
 text.account.excelUpload.fileUploadFormat=Supports only .xls and .xlsx formats
 text.account.excelUpload.FileUpload=Excel Order
 text.account.profile.QuickOrderForm=Quick Order
-text.account.excelUpload.orderShipmentPoint=Shipping Point
+text.account.excelUpload.orderShipmentPoint=Select Shipping Point
 text.account.excelUpload.productData=Product Data
 text.account.excelUpload.materialId=ENR Material Id
 text.account.excelUpload.customerMaterialId=Customer Material Id
