Order creator name in order history page.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -57,6 +57,7 @@ b2busergroup.id=Usergroup ID
 b2busergroup.name=Usergroup Name
 b2busergroup.parent=Parent Business Unit
 b2busergroup.save=Save Updates
+
 basket.add.free.gift=Add your free gift to Basket
 basket.add.to.basket=Add to basket
 basket.add.to.cart=Add
@@ -84,6 +85,7 @@ basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Ship From
 basket.page.uom=Unit Of Ordering
+basket.page.baseuom.convertion=No Of Each
 basket.page.moq=Minimum Ordering Quantity
 basket.page.customerMaterialId=Customer Material ID
 basket.page.customerProductName=Customer Product Name
@@ -1485,7 +1487,8 @@ text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
 text.account.excelUpload.noRowsFound=No Rows Found in the Uploaded file
 text.account.excelUpload.cartShippingPoint=The cart Shipping Point is {0}
-text.account.orderHistory.referenceNumber =  Reference Number 
+text.account.orderHistory.referenceNumber =Reference No
+text.account.orderHistory.notApplicable=Not Applicable 
 text.account.orderHistory.SAPorderNumber =  Order Number 
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
