SIT Observation fixes

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -160,8 +160,9 @@ db.password=hybris
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
-
-
+# Set the default B2B Unit Limit
+#----------------------------------
+b2b.MaxUserLimit=10
 
 # Set the default Log file size
 #----------------------------------
