--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -163,6 +163,10 @@ feedprocessor.defalult.leadtime.value=30
 
 log4j.appender.FILE.MaxFileSize=10MB
 
+# Set the default B2B Unit Limit
+#----------------------------------
+b2b.MaxUserLimit=10
+
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
