--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -158,7 +158,9 @@ feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
-
+# Set the default B2B Unit Limit
+#----------------------------------
+b2b.MaxUserLimit=10
 
 # Set the default Log file size
 #----------------------------------
