--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -161,9 +161,9 @@ feedprocessor.defalult.leadtime.value=30
 
 log4j.appender.FILE.MaxFileSize=10MB
 
-
-
-
+# Set the default B2B Unit Limit
+#----------------------------------
+b2b.MaxUserLimit=10
 
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
