Updated for ehp site ID as "energizer"

--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -132,10 +132,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-website.houseHold.http=http://energizer.ehpqa.com:9001
-website.houseHold.https=https://energizer.ehpqa.com:9002
-media.houseHold.http=http://energizer.ehpqa.com:9001
-media.houseHold.https=https://energizer.ehpqa.com:9002
+website.energizer.http=http://energizer.ehpqa.com:9001
+website.energizer.https=https://energizer.ehpqa.com:9002
+media.energizer.http=http://energizer.ehpqa.com:9001
+media.energizer.https=https://energizer.ehpqa.com:9002
 
 #The below URL for apache for sending the email
 #---------------------------------------------
