Changed the siteId to "edgewell" from "personalcare"

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -136,10 +136,10 @@ energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
 #Website URL
 #--------------------------------------------------------
-website.houseHold.http=http://energizer.dev.com:9001
-website.houseHold.https=https://energizer.dev.com:9002
-media.houseHold.http=http://energizer.dev.com:9001
-media.houseHold.https=https://energizer.dev.com:9002
+website.energizer.http=http://energizer.dev.com:9001
+website.energizer.https=https://energizer.dev.com:9002
+media.energizer.http=http://energizer.dev.com:9001
+media.energizer.https=https://energizer.dev.com:9002
 
 #The below URL for apache to show on email message
 #---------------------------------------------
