--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -131,10 +131,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-website.personalCare.http=http://edgewell.epcqa.com:9001
-website.personalCare.https=https://edgewell.epcqa.com:9002
-media.personalCare.http=http://edgewell.epcqa.com:9001
-media.personalCare.https=https://edgewell.epcqa.com:9002
+website.edgewell.http=http://edgewell.epcqa.com:9001
+website.edgewell.https=https://edgewell.epcqa.com:9002
+media.edgewell.http=http://edgewell.epcqa.com:9001
+media.edgewell.https=https://edgewell.epcqa.com:9002
 
 #The below URL is a apache things for sending the URL for the email links.
 #website.personalCare.http=http://qa.edgewell.com
