--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -137,11 +137,11 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
 energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-website.personalCare.http=http://edgewell.dev.com:9001
-website.personalCare.https=https://edgewell.dev.com:9002
+website.edgewell.http=http://edgewell.dev.com:9001
+website.edgewell.https=https://edgewell.dev.com:9002
 
-media.personalCare.http=http://edgewell.dev.com:9001
-media.personalCare.https=https://edgewell.dev.com:9002
+media.edgewell.http=http://edgewell.dev.com:9001
+media.edgewell.https=https://edgewell.dev.com:9002
 
 
 storefront.security.default.required.channel=https
