--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -164,6 +164,9 @@ log4j.appender.FILE.MaxFileSize=10MB
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
+# Set the default B2B Unit lead time
+#----------------------------------
+default.lead.time.value=30
 
 storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
