--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -163,6 +163,9 @@ feedprocessor.defalult.leadtime.value=30
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
+# Set the default B2B Unit lead time
+#----------------------------------
+default.lead.time.value=30
 
 # Set the default Log file size
 #----------------------------------
