--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -161,7 +161,9 @@ feedprocessor.defalult.leadtime.value=30
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
-
+# Set the default B2B Unit lead time
+#----------------------------------
+default.lead.time.value=30
 # Set the default Log file size
 #----------------------------------
 log4j.appender.FILE.MaxFileSize=10MB
