--- a/config/local.properties
+++ b/config/local.properties
@@ -162,3 +162,4 @@ storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
 orderHistoryPageSize=20
+defaultLeadTime=30
