added default lead time property

--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -175,3 +175,4 @@ storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
 orderHistoryPageSize=20
+defaultLeadTime=30
