--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -174,3 +174,4 @@ storefront.search.pageSize.Desktop=20
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
 orderHistoryPageSize=20
+defaultLeadTime=30
