--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -204,7 +204,7 @@ tomcat.development.mode=false
 
 java.mem=3G
 cache.main=300000
-tomcat.generaloptions=-Xmx${java.mem} 
+#tomcat.generaloptions=-Xmx${java.mem} 
 -Xms${java.mem} 
 -XX:PermSize=300M 
 -XX:MaxPermSize=300M 
