--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -170,20 +170,20 @@ default.lead.time.value=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
-b2BBudgetForm.setOriginalCode=OCBD10001
-b2BBudgetForm.setCode=1000
-b2BBudgetForm.setName=Unit Name From Properties
-b2BBudgetForm.setIsocode=USD
-b2BBudgetForm.setStartDate=04/15/2015
-b2BBudgetForm.setEndDate=04/15/2016
-b2BBudgetForm.setBudget=1000
+b2BBudget.OriginalCode=OCBD10001
+b2BBudget.Code=1000
+b2BBudget.Name=Unit Name From Properties
+b2BBudget.Isocode=USD
+b2BBudget.StartDate=04/15/2015
+b2BBudget.EndDate=04/15/2016
+b2BBudget.Budget=1000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
-b2bCostCenterForm.setOriginalCode=OCF10001
-b2bCostCenterForm.setCode=1001
-b2bCostCenterForm.setName=Cost Centre Name
-b2bCostCenterForm.setIsocode=USD
+b2bCostCenterOriginalCode=OCF10001
+b2bCostCenterCode=1001
+b2bCostCenterName=Cost Centre Name
+b2bCostCenterIsocode=USD
 
 
 storefront.search.pageSize.Desktop=20
