Config files are updated

--- a/envconfig/ehp/hybris/prod/local.properties
+++ b/envconfig/ehp/hybris/prod/local.properties
@@ -176,48 +176,34 @@ defaultLeadTime=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
-b2BBudgetForm.setOriginalCode=OCBD10001
-b2BBudgetForm.setCode=1000
-b2BBudgetForm.setName=Unit Name From Properties
-b2BBudgetForm.setIsocode=USD
-b2BBudgetForm.setStartDate=04/15/2015
-b2BBudgetForm.setEndDate=04/15/2016
-b2BBudgetForm.setBudget=1000
+b2BBudget.OriginalCode=OCBD10001
+b2BBudget.Code=1000
+b2BBudget.Name=Unit Name From Properties
+b2BBudget.Isocode=USD
+b2BBudget.StartDate=04/15/2015
+b2BBudget.EndDate=04/15/2016
+b2BBudget.Budget=1000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
-b2bCostCenterForm.setOriginalCode=OCF10001
-b2bCostCenterForm.setCode=1001
-b2bCostCenterForm.setName=Cost Centre Name
-b2bCostCenterForm.setIsocode=USD
+b2bCostCenter.OriginalCode=OCF10001
+b2bCostCenter.Code=1001
+b2bCostCenter.Name=Cost Centre Name
+b2bCostCenter.Isocode=USD
+
 tomcat.maxthreads=200
 tomcat.minsparethreads=50
 tomcat.maxidletime=10000
 tomcat.acceptcount=100
 
 build.development.mode=false
+
 tomcat.development.mode=false
  
 
 java.mem=3G
 cache.main=300000
-tomcat.generaloptions=-Xmx${java.mem} 
--Xms${java.mem} 
--XX:PermSize=300M 
--XX:MaxPermSize=300M 
--Xss256K -XX:+DisableExplicitGC 
--XX:+UseConcMarkSweepGC 
--XX:CMSInitiatingOccupancyFraction=75 
--XX:+CMSPermGenSweepingEnabled 
--XX:+CMSClassUnloadingEnabled 
--XX:+UseCMSInitiatingOccupancyOnly 
--XX:+CMSParallelRemarkEnabled 
--XX:+ParallelRefProcEnabled 
--XX:+CMSScavengeBeforeRemark  
--XX:+PrintGCTimeStamps 
--XX:+PrintGCDetails 
--Xloggc:"${HYBRIS_LOG_DIR}/tomcat/java_gc.log" 
--Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs=../lib/endorsed -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000
+tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -XX:PermSize=300M -XX:MaxPermSize=300M -Xss256K -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSParallelRemarkEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark  -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:"${HYBRIS_LOG_DIR}/tomcat/java_gc.log" -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs=../lib/endorsed -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000
 
 #put your additional java options here
 tomcat.javaoptions= 
