in offline order, creation time included.

--- a/config/local.properties
+++ b/config/local.properties
@@ -64,7 +64,8 @@ offline.energizer.site = personalCare
 ponumber.checking.pattern=[ A-Za-z0-9_@./\\\\#&+-]*$
 
 #Date Format
-dateFormat=yyyyMMdd
+dateFormat=yyyyMMddHHmmss
+deliveryDateFormat=yyyyMMdd
 
 #From email address details for sending order email
 fromEmailAddress.orderEmailSender=customercare@energizer.com
