text.account.user.save property Changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -751,6 +751,7 @@ text.account.replenishment.total.prices=Prices maybe different at the time of th
 text.account.replenishment.viewReplenishmentOrders=View your replenishment orders
 text.account.trackOrders=Track your orders
 text.account.user.saveUpdates=Save Updates
+text.account.user.save=Save
 text.account.viewOrderApproval=View orders that require approval
 text.account.viewOrderHistory=View order history
 text.account.viewQuotes=View my quotes
