1. Permission validation added java and prop. 2. Dev Apache envconfig added. 3. ehp and epc local.properties modified.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1252,6 +1252,12 @@ text.company.permissions.unit.label=Parent Business Unit
 text.company.permissions.unit.title=Parent Business Unit
 text.company.permissions.value.label=Permission value
 text.company.permissions.value.title=Value
+text.company.managePermissions.value.error.permissiontype =Permission type is required
+text.company.managePermissions.value.error.businessunit =Parent Business unit is required
+text.company.managePermissions.value.error.permissioncurrency =Permission currency is required
+text.company.managePermissions.value.error.permissionvalue =Permission value is required
+text.company.managePermissions.value.error.permissiontimespan =Permission timespan is required
+text.company.managePermissions.value.error.permissionname=Permission name is required
 text.company.permissions.view.page=View Permission {0}
 text.company.permissions.viewDetails.page.title=View Permissions
 text.company.roles.name=Roles
