--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -19,9 +19,9 @@ forgottenPassword.emailContext.expiresInSeconds=1800
 isEPCEnabled=false
 isEHPEnabled=true
 energizer.default.password=Energizer@123
-####################################################################################
+#---------------------------------------------
 # Email setup											   						   #
-####################################################################################
+#---------------------------------------------
 mail.smtp.server=fitsmtp
 mail.smtp.port=25
 mail.smtp.user=
@@ -29,11 +29,10 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=test@hybris.de
+mail.from=sriram.venkatasubramanian@energizer.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=test@hybris.de
-####################################################################################
-
+mail.replyto=sriram.venkatasubramanian@energizer.com
+#---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
 interfaceType_SalesArea =energizerSalesAreaUomCSVProcessor
@@ -72,7 +71,6 @@ dateFormat=yyyyMMddHHmmss
 deliveryDateFormat=yyyyMMdd
 
 #From email address details for sending order email
-fromEmailAddress.orderEmailSender=customercare@energizer.com
 fromEmailDisplayName.orderEmailSender=Customer Service
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
@@ -82,17 +80,16 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
 
 # Container volume in M3 and weight in KG
-##########################################
-
+#------------------------------------------------------
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 excelFileSize=1000000
 
-
-# Catalog Version Information
-#############################
+#------------------------------------------------------ 
+#Catalog Version Information
+#------------------------------------------------------
 catalogName=houseHoldProductCatalog
 version=Online
 
@@ -126,17 +123,13 @@ marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
 
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
-
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-website.energizer.http=http://energizer.ehpqa.com:9001
-website.energizer.https=https://energizer.ehpqa.com:9002
-media.energizer.http=http://energizer.ehpqa.com:9001
-media.energizer.https=https://energizer.ehpqa.com:9002
+website.energizer.http=http://qa.energizer.com
+website.energizer.https=https://qa.energizer.com
+media.energizer.http=http://qa.energizer.com
+media.energizer.https=https://qa.energizer.com
 
 #The below URL for apache for sending the email
 #---------------------------------------------
@@ -146,7 +139,6 @@ media.energizer.https=https://energizer.ehpqa.com:9002
 #media.houseHold.https=https://ehpqa.energizer.com
 
 storefront.security.default.required.channel=https
-
 #Oracle DB setup Information
 db.url=jdbc:oracle:thin:@10.97.1.166:1521:hbq
 db.driver=oracle.jdbc.driver.OracleDriver
@@ -219,3 +211,11 @@ cronjob.maxthreads=50
 
 hmc.debug.showjspcomments=false
 hmc.developermode=false
+
+#------------------------------------------------------------------------------------------
+# Email Properties
+#------------------------------------------------------------------------------------------
+fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
+cronjobs.from.email=sriram.venkatasubramanian@energizer.com
