--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -125,21 +125,18 @@ marketingcategory.level3.type=Sub-Brand
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-
-website.energizer.http=http://qa.energizer.com
-website.energizer.https=https://qa.energizer.com
-media.energizer.http=http://qa.energizer.com
-media.energizer.https=https://qa.energizer.com
-
-#The below URL for apache for sending the email
-#---------------------------------------------
-#website.houseHold.http=http://ehpqa.energizer.com
-#website.houseHold.https=https://ehpqa.energizer.com
-#media.houseHold.http=http://ehpqa.energizer.com
-#media.houseHold.https=https://ehpqa.energizer.com
+#----------------------------------
+# Website URL
+#----------------------------------
+website.houseHold.http=http://qa.energizer.com
+website.houseHold.https=https://qa.energizer.com
+media.houseHold.http=http://qa.energizer.com
+media.houseHold.https=https://qa.energizer.com
 
 storefront.security.default.required.channel=https
+#----------------------------------
 #Oracle DB setup Information
+#----------------------------------
 db.url=jdbc:oracle:thin:@10.97.1.166:1521:hbq
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
@@ -212,6 +209,7 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 tomcat.site.proxyName=qa.energizer.com
+tomcat.site.hostName=energizer.qa.com
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
 proxy.http.port=80
 # The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
