ENV Config updated.

--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -15,10 +15,14 @@ lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
-##Configuration for sites
+#------------------------------------------------
+#Configuration for sites
+#------------------------------------------------
 isEPCEnabled=false
 isEHPEnabled=true
+
 energizer.default.password=Energizer@123
+
 #---------------------------------------------
 # Email setup											   						   #
 #---------------------------------------------
@@ -107,8 +111,9 @@ feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductD
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
 simulateTimeOutinSeconds=30
-
+#------------------------------------------------
 #Bistalk URL for order create, simulate and report
+#------------------------------------------------
 simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
 orderSubmitURL=http://10.240.0.111:8081/SalesOrderCreate
 invoicePdfURL=http://10.240.0.111:8080/GenerateURL
@@ -142,18 +147,24 @@ db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
 
+#------------------------------------------------
 # Default value of MOQ  and  Lead Time
-######################################
+#------------------------------------------------
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
+#------------------------------------------------
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
+
+#------------------------------------------------
 # Set the default B2B Unit lead time
 #----------------------------------
 default.lead.time.value=30
+
+#------------------------------------------------
 # Set the default Log file size
 #----------------------------------
 log4j.appender.FILE.MaxFileSize=10MB
@@ -166,20 +177,20 @@ defaultLeadTime=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
-b2BBudgetForm.setOriginalCode=OCBD10001
-b2BBudgetForm.setCode=1000
-b2BBudgetForm.setName=Unit Name From Properties
-b2BBudgetForm.setIsocode=USD
-b2BBudgetForm.setStartDate=04/15/2015
-b2BBudgetForm.setEndDate=04/15/2016
-b2BBudgetForm.setBudget=1000
+b2BBudget.OriginalCode=OCBD10001
+b2BBudget.Code=1000
+b2BBudget.Name=Unit Name From Properties
+b2BBudget.Isocode=USD
+b2BBudget.StartDate=04/15/2015
+b2BBudget.EndDate=04/15/2016
+b2BBudget.Budget=1000
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
-b2bCostCenterForm.setOriginalCode=OCF10001
-b2bCostCenterForm.setCode=1001
-b2bCostCenterForm.setName=Cost Centre Name
-b2bCostCenterForm.setIsocode=USD
+b2bCostCenter.OriginalCode=OCF10001
+b2bCostCenter.Code=1001
+b2bCostCenter.Name=Cost Centre Name
+b2bCostCenter.Isocode=USD
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
@@ -208,12 +219,16 @@ cronjob.maxthreads=50
 
 hmc.debug.showjspcomments=false
 hmc.developermode=false
+
 tomcat.site.proxyName=qa.energizer.com
 tomcat.site.hostName=energizer.qa.com
+
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
 proxy.http.port=80
+
 # The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
 proxy.ssl.port=443
+
 #Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
 tomcat.ajp.useipv=true
 
