--- a/envconfig/epc/hybris/prod/local.properties
+++ b/envconfig/epc/hybris/prod/local.properties
@@ -14,14 +14,19 @@ installed.tenants=t1,junit
 lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
-forgottenPassword.emailContext.expiresInSeconds=180
-##Configuration for sites
+forgottenPassword.emailContext.expiresInSeconds=1800
+
+#---------------------------------------------
+#Configuration for sites
+#---------------------------------------------
 isEPCEnabled=true
 isEHPEnabled=false
+
 energizer.default.password=Energizer@123
-####################################################################################
+
+#---------------------------------------------
 # Email setup											   						   #
-####################################################################################
+#---------------------------------------------
 mail.smtp.server=fitsmtp.care.corp
 mail.smtp.port=25
 mail.smtp.user=
@@ -29,11 +34,10 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=test@hybris.de
+mail.from=sriram.venkatasubramanian@energizer.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=test@hybris.de
-####################################################################################
-
+mail.replyto=sriram.venkatasubramanian@energizer.com
+#---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
 interfaceType_SalesArea =energizerSalesAreaUomCSVProcessor
@@ -71,25 +75,30 @@ ponumber.checking.pattern=[ A-Za-z0-9_@./\\\\#&+-]*$
 dateFormat=yyyyMMddHHmmss
 deliveryDateFormat=yyyyMMdd
 
+#------------------------------------------------------
 #From email address details for sending order email
-fromEmailAddress.orderEmailSender=customercare@energizer.com
+#------------------------------------------------------
 fromEmailDisplayName.orderEmailSender=Customer Service
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
+#------------------------------------------------------
 #Shared file location
-
+#------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
+#------------------------------------------------------
+# Container volume in M3 and weight in KG
+#------------------------------------------------------
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 excelFileSize=1000000
 
-
-# Catalog Version Information
-#############################
+#------------------------------------------------------ 
+#Catalog Version Information
+#------------------------------------------------------
 catalogName=personalCareProductCatalog
 version=Online
 
@@ -106,14 +115,14 @@ feedprocessor.materialnamefeed.headers=ERPMaterialID,Language,ProductDesription
 feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductDesription
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
+simulateTimeOutinSeconds=30
 
-
+#--------------------------------------------------------
 #Biz Talk URL for order simulate, create and report
+#--------------------------------------------------------
 simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
 orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
 invoicePdfURL=http://10.99.13.61:8080/GenerateURL
-
-simulateTimeOutinSeconds=30
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID
@@ -125,19 +134,12 @@ marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
 
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
-
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=Chandan.Ar@mindtree.com
 
-#website.personalCare.http=http://edgewell.epcqa.com:9001
-#website.personalCare.https=https://edgewell.epcqa.com:9002
-#media.personalCare.http=http://edgewell.epcqa.com:9001
-#media.personalCare.https=https://edgewell.epcqa.com:9002
-
-#The below URL is a apache things for sending the URL for the email links.
+#---------------------------------------------
+#website url
+#---------------------------------------------
 website.personalCare.http=http://qa.edgewell.com
 website.personalCare.https=https://qa.edgewell.com
 media.personalCare.http=http://qa.edgewell.com
@@ -145,69 +147,81 @@ media.personalCare.https=https://qa.edgewell.com
 
 storefront.security.default.required.channel=https
 
+#----------------------------------
 #Oracle DB setup Information
+#----------------------------------
 db.url=jdbc:oracle:thin:@10.98.1.209:1521:hbq
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
 
+#----------------------------------
 # Default value of MOQ  and  Lead Time
-######################################
+#----------------------------------
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
 
-# Set the default Log file size
-######################################
-
+#----------------------------------
+#Set the default Log file size
+#----------------------------------
 log4j.appender.FILE.MaxFileSize=10MB
 
+#----------------------------------
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
+
+#----------------------------------
 # Set the default B2B Unit lead time
 #----------------------------------
 default.lead.time.value=30
 
-storefront.search.pageSize.Desktop=20
-faq.page.url=/faq
-termsandconditions.page.url=/terms-and-conditions
-orderHistoryPageSize=20
-defaultLeadTime=30
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
 #------------------------------------------------------------------------
-b2BBudget.OriginalCode=OCBD10001
+b2BBudget.OriginalCode=10001
 b2BBudget.Code=1000
-b2BBudget.Name=Unit Name From Properties
+b2BBudget.Name=Print Unit Name Here
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
 b2BBudget.EndDate=04/15/2016
 b2BBudget.Budget=1000
+
 #------------------------------------------
 # set the default B2BUnit cost center	  #
 #------------------------------------------
-b2bCostCenter.OriginalCode=OCF10001
+b2bCostCenter.OriginalCode=10001
 b2bCostCenter.Code=1001
-b2bCostCenter.Name=Cost Centre Name
+b2bCostCenter.Name=Print Cost Centre Name
 b2bCostCenter.Isocode=USD
 
+#------------------------------------------
+# set the default storefront page size	  #
+#------------------------------------------
+storefront.search.pageSize.Desktop=20
+orderHistoryPageSize=20
+defaultLeadTime=30
+
+#------------------------------------------
+# set the default fag and t&c url here	  #
+#------------------------------------------
+faq.page.url=/faq
+termsandconditions.page.url=/terms-and-conditions
+
+####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
 tomcat.minsparethreads=50
 tomcat.maxidletime=10000
 tomcat.acceptcount=100
 
 build.development.mode=false
-
 tomcat.development.mode=false
  
 
-java.mem=3G
+java.mem=6G
 cache.main=300000
 tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -XX:PermSize=300M -XX:MaxPermSize=300M -Xss256K -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSParallelRemarkEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark  -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:"${HYBRIS_LOG_DIR}/tomcat/java_gc.log" -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs=../lib/endorsed -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000
-
-#put your additional java options here
-tomcat.javaoptions= 
 
 
 db.pool.maxActive=90
@@ -222,3 +236,26 @@ cronjob.maxthreads=50
 
 hmc.debug.showjspcomments=false
 hmc.developermode=false
+
+#------------------------------------------------------------------------------------------
+# Proxy and port Properties
+#------------------------------------------------------------------------------------------
+tomcat.site.proxyName=qa.edgewell.com
+tomcat.site.hostName=edgewell.qa.com
+
+# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+proxy.ssl.port=443
+
+#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+tomcat.ajp.useipv=true
+
+#------------------------------------------------------------------------------------------
+# Email Properties
+#------------------------------------------------------------------------------------------
+fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
+cronjobs.from.email=sriram.venkatasubramanian@energizer.com
