--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -15,9 +15,13 @@ lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
-##Configuration for sites
+
+#---------------------------------------------
+#Configuration for sites
+#---------------------------------------------
 isEPCEnabled=true
 isEHPEnabled=false
+
 energizer.default.password=Energizer@123
 #---------------------------------------------
 # Email setup											   						   #
@@ -34,6 +38,7 @@ mail.from=sriram.venkatasubramanian@energizer.com
 mail.replyto=sriram.venkatasubramanian@energizer.com
 #---------------------------------------------
 # properties for interface types
+#---------------------------------------------
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
 interfaceType_SalesArea =energizerSalesAreaUomCSVProcessor
 interfaceType_B2BUser =energizerB2BUserCSVProcessor
@@ -131,11 +136,6 @@ marketingcategory.level3.type=Sub-Brand
 
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-
-#website.personalCare.http=http://edgewell.epcqa.com:9001
-#website.personalCare.https=https://edgewell.epcqa.com:9002
-#media.personalCare.http=http://edgewell.epcqa.com:9001
-#media.personalCare.https=https://edgewell.epcqa.com:9002
 
 #---------------------------------------------
 #website url
