--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -15,14 +15,17 @@ lang.packs=en,es
 
 forgottenPassword.emailContext.expiresInMinutes=30
 forgottenPassword.emailContext.expiresInSeconds=1800
-
-##Configuration for sites
+#------------------------------------------------
+#Configuration for sites
+#------------------------------------------------
 isEPCEnabled=false
 isEHPEnabled=true
+
 energizer.default.password=Energizer@123
-####################################################################################
+
+#---------------------------------------------
 # Email setup											   						   #
-####################################################################################
+#---------------------------------------------
 mail.smtp.server=fitsmtp
 mail.smtp.port=25
 mail.smtp.user=
@@ -30,11 +33,10 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=test@hybris.de
+mail.from=sriram.venkatasubramanian@energizer.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=test@hybris.de
-####################################################################################
-
+mail.replyto=sriram.venkatasubramanian@energizer.com
+#---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
 interfaceType_SalesArea =energizerSalesAreaUomCSVProcessor
@@ -65,7 +67,7 @@ feedprocessor.energizerOfflineOrderFeed.mandatory=Status,SAPOrderNo,B2BAccount,C
 #Possible Order Status
 #If you want to add new order status that is not OOTB then you must add in energizercore-items.xml and need to update the system
 possibleOrderStatus=PENDING,IN_PROCESS,SHIPPED,INVOICED,CANCELLED
-offline.energizer.site=houseHold
+offline.energizer.site = houseHold
 ponumber.checking.pattern=[ A-Za-z0-9_@./\\\\#&+-]*$
 
 #Date Format
@@ -73,7 +75,6 @@ dateFormat=yyyyMMddHHmmss
 deliveryDateFormat=yyyyMMdd
 
 #From email address details for sending order email
-fromEmailAddress.orderEmailSender=customercare@energizer.com
 fromEmailDisplayName.orderEmailSender=Customer Service
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
@@ -83,17 +84,16 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 sharedFolderPath=W:\\CSVFeedFolder\\CSVFeedFolder-EHP
 
 # Container volume in M3 and weight in KG
-##########################################
-
+#------------------------------------------------------
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
 fourty.feet.container.weight=18234.3948
 excelFileSize=1000000
 
-
-# Catalog Version Information
-#############################
+#------------------------------------------------------ 
+#Catalog Version Information
+#------------------------------------------------------
 catalogName=houseHoldProductCatalog
 version=Online
 
@@ -111,7 +111,7 @@ feedprocessor.materialnamefeed.headers.mandatory=ERPMaterialID,Language,ProductD
 interfaceType_MaterialNameFeed=energizerProductNameCSVProcessor
 
 simulateTimeOutinSeconds=30
-
+#------------------------------------------------
 #Bistalk URL for order create, simulate and report
 #------------------------------------------------
 simulateURL=http://10.240.0.111:8080/SalesOrderSimulate
@@ -128,47 +128,43 @@ marketingcategory.level1.type=Product Segment
 marketingcategory.level2.type=Brand
 marketingcategory.level3.type=Sub-Brand
 
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
-
 feedprocessor.productcategoryrelationfeed.headers=MappingCode,Level1,Level2,Level3,Level4
 feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=Chandan.Ar@mindtree.com
-
-#Website URL
-#--------------------------------------------------------
-website.energizer.http=http://energizer.dev.com:9001
-website.energizer.https=https://energizer.dev.com:9002
-media.energizer.http=http://energizer.dev.com:9001
-media.energizer.https=https://energizer.dev.com:9002
-
-#The below URL for apache to show on email message
-#---------------------------------------------
-#website.houseHold.http=http://dev.energizer.com
-#website.houseHold.https=https://dev.energizer.com
-#media.houseHold.http=http://dev.energizer.com
-#media.houseHold.https=https://energizer.dev.com
+#----------------------------------
+# Website URL
+#----------------------------------
+website.houseHold.http=http://dev.energizer.com
+website.houseHold.https=https://dev.energizer.com
+media.houseHold.http=http://dev.energizer.com
+media.houseHold.https=https://dev.energizer.com
 
 storefront.security.default.required.channel=https
-
+#----------------------------------
 #Oracle DB setup Information
+#----------------------------------
 db.url=jdbc:oracle:thin:@10.97.1.167:1523:hbd
 db.driver=oracle.jdbc.driver.OracleDriver
 db.username=hybris
 db.password=hybris
 
+#------------------------------------------------
 # Default value of MOQ  and  Lead Time
-######################################
+#------------------------------------------------
 feedprocessor.defalult.moq.value=1
 feedprocessor.defalult.uom.value=PAL
 feedprocessor.defalult.leadtime.value=30
+
+#------------------------------------------------
 # Set the default B2B Unit Limit
 #----------------------------------
 b2b.MaxUserLimit=10
+
+#------------------------------------------------
 # Set the default B2B Unit lead time
 #----------------------------------
 default.lead.time.value=30
 
+#------------------------------------------------
 # Set the default Log file size
 #----------------------------------
 log4j.appender.FILE.MaxFileSize=10MB
@@ -196,22 +192,19 @@ b2bCostCenter.Code=1001
 b2bCostCenter.Name=Cost Centre Name
 b2bCostCenter.Isocode=USD
 
+####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
 tomcat.minsparethreads=50
 tomcat.maxidletime=10000
 tomcat.acceptcount=100
 
 build.development.mode=false
-
 tomcat.development.mode=false
  
 
 java.mem=6G
 cache.main=300000
 tomcat.generaloptions=-Xmx${java.mem} -Xms${java.mem} -XX:PermSize=300M -XX:MaxPermSize=300M -Xss256K -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSParallelRemarkEnabled -XX:+ParallelRefProcEnabled -XX:+CMSScavengeBeforeRemark  -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:"${HYBRIS_LOG_DIR}/tomcat/java_gc.log" -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs=../lib/endorsed -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}" -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000
-
-#put your additional java options here
-tomcat.javaoptions= 
 
 
 db.pool.maxActive=90
@@ -226,3 +219,23 @@ cronjob.maxthreads=50
 
 hmc.debug.showjspcomments=false
 hmc.developermode=false
+
+tomcat.site.proxyName=dev.energizer.com
+tomcat.site.hostName=energizer.dev.com
+
+# The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
+proxy.http.port=80
+
+# The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
+proxy.ssl.port=443
+
+#Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
+tomcat.ajp.useipv=true
+
+#------------------------------------------------------------------------------------------
+# Email Properties
+#------------------------------------------------------------------------------------------
+fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
+energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
+cronjobs.from.email=sriram.venkatasubramanian@energizer.com
