Purchase Order Number changed to P.O.Number

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1514,7 +1514,7 @@ text.account.orderHistory.carrierName=Carrier Name
 text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
-text.account.orderHistory.poNumber  =Purchase Order Number
+text.account.orderHistory.poNumber  =P.O.Number
 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
