fixes for update password process redirecting to generate password page once logged in, fixes for the url getting repeated when we sign out from home page and sign in to homepage

--- a/config/local.properties
+++ b/config/local.properties
@@ -22,9 +22,9 @@ energizer.default.password=Energizer@123
 ####################################################################################
 # Email setup											   						   #
 ####################################################################################
-mail.smtp.server=email.energizer.com
-mail.smtp.port=25
-mail.smtp.user=customerservice@energizer.com
+mail.smtp.server=localhost
+mail.smtp.port=2500
+mail.smtp.user=
 mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
@@ -132,8 +132,8 @@ website.energizer.https=https://energizer.local.com:9002
 media.energizer.http=http://energizer.local.com:9001
 media.energizer.https=https://energizer.local.com:9002
 
-website.personalCare.http=http://personalcare.local.com:9001
-website.personalCare.https=https://personalcare.local.com:9002
+website.personalCare.http=http://energizer.local.com
+website.personalCare.https=https://energizer.local.com
 
 media.personalCare.http=http://personalcare.local.com:9001
 media.personalCare.https=https://personalcare.local.com:9002
