--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer.properties
@@ -72,3 +72,5 @@ basket.your.shopping.basket=Your Shopping Cart
 breadcrumb.cart=Cart
 popup.cart.title=Your Shopping Cart
 
+
+login.maxattempts.failed=Your maximum attempts to login has failed. Your account is blocked. Please contact your administrator to unblock your account. Incase, you have forgot your password, click on the Generate New Password link.
