--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -33,9 +33,9 @@ mail.smtp.password=
 mail.use.tls=true
 mail.smtp.starttls.enable=true
 #Email address displayed in the "Sender" field (mandatory)
-mail.from=sriram.venkatasubramanian@energizer.com
+mail.from=ehpvalidation@gmail.com
 #Email address used for replying to emails (mandatory)
-mail.replyto=sriram.venkatasubramanian@energizer.com
+mail.replyto=ehpvalidation@gmail.com
 #---------------------------------------------
 # properties for interface types
 interfaceType_EnergizerCustomer=energizerCustomerCSVProcessor
@@ -235,7 +235,7 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.from.email=sriram.venkatasubramanian@energizer.com
-energizer.customer.support.to.email=sriram.venkatasubramanian@energizer.com
-cronjobs.from.email=sriram.venkatasubramanian@energizer.com
+fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
+energizer.customer.support.from.email=ehpvalidation@gmail.com
+energizer.customer.support.to.email=ehpvalidation@gmail.com
+cronjobs.from.email=ehpvalidation@gmail.com
